--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "@components/*": ["./components/*"],
       "@utils/*": ["./utils/*"],
       "@/styles/*": ["./styles/*"],
-      "@/hooks/*": ["./hooks/*"]
+      "@/hooks/*": ["./hooks/*"],
+      "@constants/*": ["./constants/*"]
     }
   }
 }
